--- a/documentation/src/css/custom.css
+++ b/documentation/src/css/custom.css
@@ -26,7 +26,7 @@
   --ifm-color-primary-light: #ff8b9d; /* Light Coral Pink */
   --ifm-color-primary-lighter: #ff9fa8; /* Faded Pinkish Peach */
   --ifm-color-primary-lightest: #ffb3b9; /* Soft Pale Pink */
-  --ifm-footer-background-color: #2c2f3b; /* Darker background for footer */
+  --ifm-footer-background-color: #aa2c45;
 }
 
 .medium-zoom-overlay{
